--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,7 @@ jdk:
 - oraclejdk8
 
 script:
-- sbt ++$TRAVIS_SCALA_VERSION test/test:fastOptJS test/test:fullOptJS
-- sbt ++$TRAVIS_SCALA_VERSION test
-- sbt ++$TRAVIS_SCALA_VERSION 'set scalaJSStage in Global := FullOptStage' 'set scalaJSStage in Test in ScalajsReact.test := FullOptStage' test
+- sbt debug ++$TRAVIS_SCALA_VERSION test 'set scalaJSStage in Global := FullOptStage' 'set scalaJSStage in Test in ScalajsReact.test := FullOptStage' test
 
 # Use PhantomJS 2
 # https://mediocre.com/forum/topics/phantomjs-2-and-travis-ci-we-beat-our-heads-against-a-wall-so-you-dont-have-to
